# unsf

./: .gitignore  .travis.sh  CMakeLists.txt  LICENSE  Makefile  Makefile.darwin  Makefile.linux  Makefile.mingw  Makefile.os2  README.md  appveyor.yml  libunsf.c  libunsf.h  libunsf.vcproj  sf2pat.1  strtok_r.h  unsf.1  unsf.c  unsf.pc.in  unsf.vcproj  unsf_static.vcproj
src/: .travis.sh  .travis.yml  CMakeLists.txt  Makefile.darwin  Makefile.linux  libunsf.h  libunsf.vcproj  unsf.c  unsf.pc.in  unsf.sln  unsf.vcproj
